--- a/app/AdminModule/templates/Producer/detail.latte
+++ b/app/AdminModule/templates/Producer/detail.latte
@@ -5,8 +5,10 @@
 {/block}
 
 {block content}
-    {$producer->name}<br>
-    {$producer->time_delivery} days
+    <div class="col-10 offset-1 mb-3">
+        <h1 class="h3">{$producer->name}</h1>
+        <span><b class="pr-3">Time to delivery:</b>{$producer->time_delivery} days</span>
+    </div>
     <div class="col-10 offset-1">
         <table class="table table-bproducered table-hover">
             <thead class="thead-dark">
