Admin delete update

--- a/app/AdminModule/templates/Insurer/detail.latte
+++ b/app/AdminModule/templates/Insurer/detail.latte
@@ -1,38 +1,47 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  Insurer detail {$id}
+	Insurer detail {$id}
 {/block}
 
 {block content}
-    <div class="col-12 d-flex justify-content-center">
-        <h1>{$insurer->name}</h1>
-    </div>
-    <div class="col-10 offset-1">
-        <table class="table table-binsurered table-hover">
-            <thead class="thead-dark">
-            <tr>
-                <th scope="col">Drug</th>
-                <th scope="col">Price</th>
-                <th scope="col">Discounted</th>
-            </tr>
-            </thead>
-            <tbody>
-            {if $insuredProducts->count() != 0}
-                <tr n:foreach="$insuredProducts as $insuredProduct">
-                    <td>{$products->getById($insuredProduct->drug_id)->name}</td>
-                    <td>{$products->getById($insuredProduct->drug_id)->price} €</td>
-                    <td>{$products->getById($insuredProduct->drug_id)->price - $insuredProduct->price} €</td>
-                </tr>
-            {else}
-                <tr>
-                    <td>Insurers drugs not found</td>
-                </tr>
-            {/if}
-            </tbody>
-        </table>
-    </div>
-    <div class="col-10 offset-1 d-flex justify-content-end">
-        <a href="/admin/insurer/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Add drug</a>
-    </div>
+	{if $insurer}
+		<div class="col-12 d-flex justify-content-center">
+			<h1>{$insurer->name}</h1>
+		</div>
+		<div class="col-10 offset-1">
+			<table class="table table-binsurered table-hover">
+				<thead class="thead-dark">
+				<tr>
+					<th scope="col">Drug</th>
+					<th scope="col">Price</th>
+					<th scope="col">Discounted</th>
+				</tr>
+				</thead>
+				<tbody>
+				{if $insuredProducts->count() != 0}
+					<tr n:foreach="$insuredProducts as $insuredProduct">
+						<td>{$products->getById($insuredProduct->drug_id)->name}</td>
+						<td>{$products->getById($insuredProduct->drug_id)->price} €</td>
+						<td>{$products->getById($insuredProduct->drug_id)->price - $insuredProduct->price} €</td>
+					</tr>
+				{else}
+					<tr>
+						<td>Insurers drugs not found</td>
+					</tr>
+				{/if}
+				</tbody>
+			</table>
+		</div>
+		<div class="col-10 offset-1 d-flex justify-content-end">
+			<a href="/admin/insurer/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Add
+				drug</a>
+		</div>
+	{else}
+		<div class="row">
+			<div class="col-12">
+				<h1>Insurer with id {$id} doesn't exist</h1>
+			</div>
+		</div>
+	{/if}
 {/block}
