--- a/app/AdminModule/templates/User/detail.latte
+++ b/app/AdminModule/templates/User/detail.latte
@@ -76,7 +76,7 @@
               <div class="row">
                 <div class="col-md-4 offset-md-7 col-sm-5 offset-sm-6 d-flex justify-content-between">
                 <a href="/admin/user/{$sys_user->id}/edit" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
-                <a href="#" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
+                <a n:href="delete! $sys_user->id" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
                 </div>
               </div>
             </div>
