--- a/app/AdminModule/templates/Insurer/default.latte
+++ b/app/AdminModule/templates/Insurer/default.latte
@@ -22,7 +22,7 @@
                     <td style="text-align:center;">
                         <a href="/admin/insurer/{$insurer->id}"><i class="material-icons" style="color:blue;">description</i></a>
                         <a href="/admin/insurer/{$insurer->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
-                        <a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
+                        <a n:href="delete! $insurer->id"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
                     </td>
                 </tr>
             {else}
