--- a/app/AdminModule/templates/Order/default.latte
+++ b/app/AdminModule/templates/Order/default.latte
@@ -28,7 +28,7 @@
                     <td style="text-align:center;">
                         <a href="/admin/order/{$order->id}"><i class="material-icons" style="color:blue;">description</i></a>
                         <a href="/admin/order/{$order->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
-                        <a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
+                        <a n:href="delete! $order->id"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
                     </td>
                 </tr>
             {else}
