--- a/app/AdminModule/templates/Producer/default.latte
+++ b/app/AdminModule/templates/Producer/default.latte
@@ -28,7 +28,7 @@
 					<td style="text-align:center;">
 						<a href="/admin/producer/{$producer->id}"><i class="material-icons" style="color:blue;">description</i></a>
 						<a href="/admin/producer/{$producer->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
-						<a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
+						<a n:href="delete! $producer->id"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
 					</td>
 				</tr>
 			{else}
