--- a/app/AdminModule/templates/Product/detail.latte
+++ b/app/AdminModule/templates/Product/detail.latte
@@ -41,7 +41,7 @@
           <div class="row">
             <div class="col-3 offset-8 d-flex justify-content-between">
             <a href="/admin/product/{$product->id}/edit" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
-            <a href="#" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
+            <a n:href="delete! $product->id" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
             </div>
           </div>
         </div>
