--- a/app/templates/Cart/default.latte
+++ b/app/templates/Cart/default.latte
@@ -15,9 +15,7 @@
 					{$product->name}
 				</div>
 				<div class="col-2 d-flex align-items-center">
-					{form summaryForm}
-						{input count}
-					{/form}
+    				<p><input type=number name="{$id}" value={$count}></p>
 				</div>
 				<div class="col-2 d-flex justify-content-end pr-0 align-items-center">
 					delete
