--- a/app/AdminModule/templates/Order/default.latte
+++ b/app/AdminModule/templates/Order/default.latte
@@ -23,7 +23,7 @@
                     <th scope="row">{$order->id}</th>
                     <td>{$order->status}</td>
                     <td>{$order->city}</td>
-                    <td>{$order->zip}</td>
+                    <td>{str_pad($order->zip, 5, "0", STR_PAD_LEFT)}</td>
                     <td>{$order->address}</td>
                     <td style="text-align:center;">
                         <a href="/admin/order/{$order->id}"><i class="material-icons" style="color:blue;">description</i></a>
