--- a/app/templates/Cart/default.latte
+++ b/app/templates/Cart/default.latte
@@ -6,28 +6,32 @@
 
 {block content}
 	<div class="container-fluid content">
-		{foreach $products as $id => [$product, $count]}
-			<div class="row border-bottom pb-2 pt-2 border-dark">
-				<div class="col-2 offset-2 pl-0 d-flex align-items-center">
-					<img src="{$product->image}" alt="product image" class="img-thumbnail" width="100">
+		{ifset $products}
+			{foreach $products as $id => [$product, $count]}
+				<div class="row border-bottom pb-2 pt-2 border-dark">
+					<div class="col-2 offset-2 pl-0 d-flex align-items-center">
+						<img src="{$product->image}" alt="product image" class="img-thumbnail" width="100">
+					</div>
+					<div class="col-2 d-flex align-items-center">
+						{$product->name}
+					</div>
+					<div class="col-2 d-flex align-items-center">
+						<p><input type=number name="{$id}" value={$count}></p>
+					</div>
+					<div class="col-2 d-flex justify-content-end pr-0 align-items-center">
+						delete
+					</div>
 				</div>
-				<div class="col-2 d-flex align-items-center">
-					{$product->name}
-				</div>
-				<div class="col-2 d-flex align-items-center">
-    				<p><input type=number name="{$id}" value={$count}></p>
-				</div>
-				<div class="col-2 d-flex justify-content-end pr-0 align-items-center">
-					delete
+			{/foreach}
+			<div class="row mt-3">
+				<div class="col-8 pr-0 offset-2 d-flex justify-content-end">
+					{form summaryForm}
+						{input summary}
+					{/form}
 				</div>
 			</div>
-		{/foreach}
-		<div class="row mt-3">
-			<div class="col-8 pr-0 offset-2 d-flex justify-content-end">
-				{form summaryForm}
-					{input summary}
-				{/form}
-			</div>
-		</div>
+		{else}
+			<p>Kosik je prazdny</p>
+		{/ifset}
 	</div>
 {/block}
