--- a/app/templates/Cart/summary.latte
+++ b/app/templates/Cart/summary.latte
@@ -6,20 +6,22 @@
 
 {block content}
 	<div class="container-fluid content">
-        <div class="row border-bottom pb-2 pt-2 border-dark">
-            <div class="col-2 offset-2 pl-0 d-flex align-items-center">
-                <img src="{*$product->image*}" alt="product image" class="img-thumbnail" width="100">IMAGE
-            </div>
-            <div class="col-2 d-flex align-items-center">
-                NAME
-            </div>
-            <div class="col-2 d-flex align-items-center">
-                COUNT
-            </div>
-        </div>
+		{foreach $products as $id => [$product, $count]}
+			<div class="row border-bottom pb-2 pt-2 border-dark">
+				<div class="col-2 offset-2 pl-0 d-flex align-items-center">
+					<img src="{$product->image}" alt="product image" class="img-thumbnail" width="100">
+				</div>
+				<div class="col-2 d-flex align-items-center">
+					{$product->name}
+				</div>
+				<div class="col-2 d-flex align-items-center">
+					{$count}
+				</div>
+			</div>
+		{/foreach}
 		<div class="row mt-3">
 			<div class="col-8 pr-0 offset-2 d-flex justify-content-end">
-            BUY
+				<a n:href="buy!">BUY</a>
 			</div>
 		</div>
 	</div>
