--- a/app/templates/Cart/default.latte
+++ b/app/templates/Cart/default.latte
@@ -18,7 +18,7 @@
     				<p><input type=number name="{$id}" value={$count}></p>
 				</div>
 				<div class="col-2 d-flex justify-content-end pr-0 align-items-center">
-					delete
+                        <a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
 				</div>
 			</div>
 		{/foreach}
