--- a/app/templates/Cart/summary.latte
+++ b/app/templates/Cart/summary.latte
@@ -15,22 +15,29 @@
 					{$product->name}
 				</div>
 				<div class="col-2 d-flex align-items-center">
-					{$count}
+					{$count} ks
+				</div>
+				<div class="col-2 d-flex align-items-center">
+					X
+				</div>
+				<div class="col-2 d-flex align-items-center">
+					{$product->price} €
 				</div>
 			</div>
+			{php $sum += ($count*$product->price)}
 		{/foreach}
 		<div class="row mt-3">
 			<div class="col-8 pr-0 offset-2 d-flex justify-content-between">
-                <span><b class="pr-3">Total:</b>{$sum}€</span>
+                <span><b class="pr-3">Total:</b>{$sum} €</span>
                 <span><a n:href="buy!">BUY</a></span>
 			</div>
 			<div class="col-8 pr-0 offset-2 d-flex flex-column justify-content-start mt-5">
                 <span><h4>Delivery information:</h4></span>
-                <span><b class="pr-3">Name:</b></span>
-                <span><b class="pr-3">Address:</b></span>
-                <span><b class="pr-3">City:</b></span>
-                <span><b class="pr-3">ZIP:</b></span>
-                <span><b class="pr-3">Country:</b></span>
+				<span><b class="pr-3">Name:</b> {$sys_user->name} {$sys_user->surname}</span>
+				<span><b class="pr-3">Address:</b> {$sys_user->address}</span>
+				<span><b class="pr-3">City:</b> {$sys_user->city}</span>
+				<span><b class="pr-3">ZIP:</b> {str_pad($sys_user->zip, 5, "0", STR_PAD_LEFT)}</span>
+				<span><b class="pr-3">Country:</b> {$sys_user->country}</span>
 			</div>
 		</div>
 	</div>
