pdf.latte added

--- a/app/templates/Cart/default.latte
+++ b/app/templates/Cart/default.latte
@@ -31,7 +31,11 @@
 				</div>
 			{/form}
 		{else}
-			<p>Kosik je prazdny</p>
+			<div class="row">
+				<div class="col-8 offset-2 pl-0">
+					<b>Kosik je prazdny.</b>
+				</div>
+			</div>
 		{/ifset}
 	</div>
 {/block}
