--- a/app/templates/Settings/default.latte
+++ b/app/templates/Settings/default.latte
@@ -12,6 +12,7 @@
 			</div>
 			<div class="col-4 pl-0">
 				<img src= "{$sys_user->avatar}" alt="profile image" class="img-thumbnail" width="300">
+				{control uploadAvatar}
 			</div>
 			<div class="col-4 pr-0">
                 {control setUser}				
