product image upload

--- a/app/AdminModule/templates/Product/edit.latte
+++ b/app/AdminModule/templates/Product/edit.latte
@@ -34,6 +34,7 @@
                     </div>
                 </form>*}
                 {control editForm}
+                {control uploadImage}
             </div>
     {else}
         Produkt neexistuje {*TODO pridat hlasku*}
