--- a/app/templates/Cart/default.latte
+++ b/app/templates/Cart/default.latte
@@ -8,6 +8,7 @@
 	<div class="container-fluid content">
 		{ifset $products}
 			{form summaryForm}
+				{var $array_count}
 				{foreach $products as $id => [$product, $count]}
 					<div class="row border-bottom pb-2 pt-2 border-dark">
 						<div class="col-2 offset-2 pl-0 d-flex align-items-center">
@@ -20,9 +21,10 @@
 							<p><input type=number name="{$id}" value={$count}> x {$product->price} €</p>
 						</div>
 						<div class="col-2 d-flex justify-content-end pr-0 align-items-center">
-							<a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
+							<a n:href="delete! $array_count"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
 						</div>
 					</div>
+					{$array_count++}
 				{/foreach}
 				<div class="row mt-3">
 					<div class="col-8 pr-0 offset-2 d-flex justify-content-end">
