--- a/app/templates/Cart/default.latte
+++ b/app/templates/Cart/default.latte
@@ -8,7 +8,7 @@
 	<div class="container-fluid content">
 		{ifset $products}
 			{form summaryForm}
-				{var $array_count}
+				{var $array_count = 0}
 				{foreach $products as $id => [$product, $count]}
 					<div class="row border-bottom pb-2 pt-2 border-dark">
 						<div class="col-2 offset-2 pl-0 d-flex align-items-center">
