--- a/app/templates/Cart/default.latte
+++ b/app/templates/Cart/default.latte
@@ -24,7 +24,7 @@
 							<a n:href="delete! $array_count"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
 						</div>
 					</div>
-					{$array_count++}
+					{php $array_count++}
 				{/foreach}
 				<div class="row mt-3">
 					<div class="col-8 pr-0 offset-2 d-flex justify-content-end">
