--- a/app/AdminModule/templates/Default/default.latte
+++ b/app/AdminModule/templates/Default/default.latte
@@ -7,7 +7,7 @@
 {block content}
   
   <div class="col-12">
-    Nejaka sexy uvitacia hlaska
+    <b>Víta Vás správca online obchodu.</b>
   </div>
   
 {/block}
