--- a/app/AdminModule/templates/Parts/left-menu.latte
+++ b/app/AdminModule/templates/Parts/left-menu.latte
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-12">
-    <div><a href="{$basePath}/admin/user">Users</a></div>
-    <div><a href="{$basePath}/admin/product">Products</a></div>
-    <div><a href="{$basePath}/admin/order">Orders</a></div>
-    <div><a href="{$basePath}/admin/insurer">Insurers</a></div>
-    <div><a href="{$basePath}/admin/producer">Producers</a></div>
+    <div><a href="{$basePath}/admin/user">Používatelia</a></div>
+    <div><a href="{$basePath}/admin/product">Produkty</a></div>
+    <div><a href="{$basePath}/admin/order">Objednávky</a></div>
+    <div><a href="{$basePath}/admin/insurer">Poisťovne</a></div>
+    <div><a href="{$basePath}/admin/producer">Výrobcovia</a></div>
   </div>
 </div>
