--- a/app/AdminModule/templates/Producer/edit.latte
+++ b/app/AdminModule/templates/Producer/edit.latte
@@ -1,7 +1,7 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  producer edit
+  Úprava výrobcu
 {/block}
 
 {block content}
@@ -10,7 +10,7 @@
         {control editForm}
         </div>
     {else}
-        Produkt neexistuje {*TODO pridat hlasku*}
+        Výrobca neexistuje
     {/if}
 {/block}
 
