--- a/app/AdminModule/templates/Product/edit.latte
+++ b/app/AdminModule/templates/Product/edit.latte
@@ -1,43 +1,17 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  Product edit
+  Úprava produktu
 {/block}
 
 {block content}
     {if $product}
         <div class="col-10 offset-1">
-                {*<form>
-                    <div class="form-row">
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$product->name}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$product->count}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$product->producer}"> *}{*TODO zoznam*}{*
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$product->price}">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$product->description}"> *}{*TODO rozsirit na viac riadkov*}{*
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col form-group">
-                            <button type="submit" class="btn btn-primary">Add</button>
-                        </div>
-                    </div>
-                </form>*}
                 {control editForm}
                 {control uploadImage}
             </div>
     {else}
-        Produkt neexistuje {*TODO pridat hlasku*}
+        Produkt neexistuje
     {/if}
 {/block}
 
