--- a/app/templates/Cart/summary.latte
+++ b/app/templates/Cart/summary.latte
@@ -33,11 +33,11 @@
 			</div>
 			<div class="col-2 pl-0 pr-0 offset-2 d-flex flex-column justify-content-start mt-5">
                 <span><h4>Delivery information:</h4></span>
-				<span class="d-flex justify-content-between"><b class="pr-3">Name:</b> {$sys_user->name} {$sys_user->surname}</span>
-				<span class="d-flex justify-content-between"><b class="pr-3">Address:</b> {$sys_user->address}</span>
-				<span class="d-flex justify-content-between"><b class="pr-3">City:</b> {$sys_user->city}</span>
-				<span class="d-flex justify-content-between"><b class="pr-3">ZIP:</b> {str_pad($sys_user->zip, 5, "0", STR_PAD_LEFT)}</span>
-				<span class="d-flex justify-content-between"><b class="pr-3">Country:</b> {$sys_user->country}</span>
+				<span class="d-flex justify-content-between"><b class="pr-3">Meno:</b> {$sys_user->name} {$sys_user->surname}</span>
+				<span class="d-flex justify-content-between"><b class="pr-3">Adresa:</b> {$sys_user->address}</span>
+				<span class="d-flex justify-content-between"><b class="pr-3">Mesto:</b> {$sys_user->city}</span>
+				<span class="d-flex justify-content-between"><b class="pr-3">PSČ:</b> {str_pad($sys_user->zip, 5, "0", STR_PAD_LEFT)}</span>
+				<span class="d-flex justify-content-between"><b class="pr-3">Štát:</b> {$sys_user->country}</span>
 			</div>
 		</div>
 	</div>
