--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -8,7 +8,7 @@
 	<div class="container content">
 		<div class="row d-flex justify-content-center">
 			<div class="col-10 d-flex justify-content-center">
-				<span class="h4">Latest products</span>
+				<span class="h4">Nové produkty</span>
 			</div>
 			<div class="col-10 d-flex justify-content-start flex-wrap product-wrap">
 				{foreach $products as $product}
@@ -34,7 +34,7 @@
 										</p>
 									{else}
 										<p style="font-size:0.7rem;">
-											<i><b>Predpokladany cas dorucenia: XXX</b></i>
+											<i><b>Vypredané</b></i>
 										</p>
 									{/if}
 								</div>
