--- a/app/templates/Login/default.latte
+++ b/app/templates/Login/default.latte
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
-	<title>Login</title>
+	<title>Prihlásenie</title>
 </head>
 
 <body>
@@ -23,10 +23,10 @@
             {control loginForm}
 
             <div>
-				<a href="{$basePath}/register" class="d-flex justify-content-center">Register Now</a>
+				<a href="{$basePath}/register" class="d-flex justify-content-center">Registrovať teraz</a>
             </div>
             <div>
-				<a href="/{$basePath}" class="d-flex justify-content-center">Home</a>
+				<a href="/{$basePath}" class="d-flex justify-content-center">Domov</a>
             </div>
         </div>
 
