--- a/app/templates/Product/default.latte
+++ b/app/templates/Product/default.latte
@@ -1,14 +1,14 @@
 {layout '../parts/@layout.latte'}
 
 {block title}
-	Products
+	Produkty
 {/block}
 
 {block content}
 	<div class="container content">
 		<div class="row d-flex justify-content-center">
 			<div class="col-10 d-flex justify-content-center">
-				<span class="h4">All products</span>
+				<span class="h4">Všetky produkty</span>
 			</div>
 			<div class="col-10 d-flex justify-content-start flex-wrap product-wrap">
 				{foreach $products as $product}
@@ -34,7 +34,7 @@
 										</p>
 									{else}
 										<p style="font-size:0.7rem;">
-											<i><b>Predpokladany cas dorucenia: XXX</b></i>
+											<i><b>Vypredané</b></i>
 										</p>
 									{/if}
 								</div>
