--- a/app/templates/parts/footer.latte
+++ b/app/templates/parts/footer.latte
@@ -2,9 +2,9 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h3 class="h5">Contact:</h3>
+        <h3 class="h5">Kontakt:</h3>
         <ul>
-          <li>Phone: 999 999 999</li>
+          <li>Mobil: 999 999 999</li>
           <li>Mail: admin@gmail.com</li>
         </ul>
       </div>
