--- a/app/AdminModule/templates/Insurer/default.latte
+++ b/app/AdminModule/templates/Insurer/default.latte
@@ -1,7 +1,7 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  Insurers
+  Poisťovne
 {/block}
 
 {block content}
@@ -10,7 +10,7 @@
             <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
-                <th scope="col">Name</th>
+                <th scope="col">Meno</th>
                 <th scope="col"></th>
             </tr>
             </thead>
@@ -27,13 +27,13 @@
                 </tr>
             {else}
                 <tr>
-                    <td>Insurers not found</td> {*TODO whole line*}
+                    <td colspan="3">Žiadne poisťovne</td>
                 </tr>
             {/ifset}
             </tbody>
         </table>
     </div>
     <div class="col-10 offset-1 d-flex justify-content-end">
-        <a href="/admin/insurer/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">New insurer</a>
+        <a href="/admin/insurer/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Nová poisťovňa</a>
     </div>
 {/block}
