--- a/app/AdminModule/templates/Insurer/edit.latte
+++ b/app/AdminModule/templates/Insurer/edit.latte
@@ -1,7 +1,7 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  insurer edit
+  Úprava poisťovne
 {/block}
 
 {block content}
@@ -10,7 +10,7 @@
                 {control editForm}
         </div>
     {else}
-        Produkt neexistuje {*TODO pridat hlasku*}
+        Produkt neexistuje
     {/if}
 {/block}
 
