--- a/app/AdminModule/templates/Order/edit.latte
+++ b/app/AdminModule/templates/Order/edit.latte
@@ -1,7 +1,7 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  order edit
+  Upraviť objednávku
 {/block}
 
 {block content}
@@ -10,7 +10,7 @@
             {control editForm}
         </div>
     {else}
-        Produkt neexistuje {*TODO pridat hlasku*}
+        Objednávka neexistuje
     {/if}
 {/block}
 
