--- a/app/AdminModule/templates/Product/detail.latte
+++ b/app/AdminModule/templates/Product/detail.latte
@@ -1,7 +1,7 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  Product {$id}
+  Produkt {$id}
 {/block}
 
 {block content}
@@ -15,24 +15,24 @@
       <div class="row">
         <div class="col-md-6 col-sm-12">
               <img src= "{$product->image}" alt="product image" class="img-thumbnail">
-              <a href="#" class="btn btn-primary btn-md active mt-2" role="button" aria-pressed="true">Add Image</a>
+              <a href="#" class="btn btn-primary btn-md active mt-2" role="button" aria-pressed="true">Pridať obrázok</a>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="row">
             <div class="col-12">
-              <h5>Description:</h5>
+              <h5>Popis:</h5>
               <p>
                 {$product->description}
               </p>
             </div>
             <div class="col-12">
-              <h5>Producer:</h5>
+              <h5>Výrobca:</h5>
               <p>
                 {$producer}
               </p>
             </div>
             <div class="col-12">
-              <h5>Price:</h5>
+              <h5>Cena:</h5>
               <p>
                 {$product->price} €
               </p>
@@ -49,7 +49,7 @@
     {else}
         <div class="row">
           <div class="col-12">
-            <h1>Product with id {$id} doesn't exist</h1>
+            <h1>Produkt číslo {$id} neexistuje</h1>
           </div>
         </div>
     {/if}
