--- a/app/AdminModule/templates/User/edit.latte
+++ b/app/AdminModule/templates/User/edit.latte
@@ -7,46 +7,10 @@
 {block content}
     {if $sys_user}
         <div class="col-10 offset-1">
-                {*<form>
-                    <div class="form-row">
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->name}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->surname}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->email}"> *}{*TODO zoznam*}{*
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->role}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->city}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->zip}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->address}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->country}">
-                        </div>
-                        <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->insurer}">
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="col form-group">
-                            <button type="submit" class="btn btn-primary">Save</button>
-                        </div>
-                    </div>
-                </form>*}
                 {control editForm}
             </div>
     {else}
-        Produkt neexistuje {*TODO pridat hlasku*}
+        Užívateľ neexistuje
     {/if}
 {/block}
 
