--- a/app/templates/Order/default.latte
+++ b/app/templates/Order/default.latte
@@ -1,14 +1,14 @@
 {layout '../parts/@layout.latte'}
 
 {block title}
-	Your orders
+	Tvoje objednávky
 {/block}
 
 {block content}
 	<div class="container content">
 		<div class="row d-flex justify-content-center">
 			<div class="col-10 d-flex justify-content-center">
-				<span class="h4">Your orders</span>
+				<span class="h4">Tvoje objednávky</span>
 			</div>
 			<div class="col-10 d-flex justify-content-start flex-wrap">
                 <table class="table table-bordered table-hover">
@@ -16,11 +16,11 @@
                     <tr>
 						<th scope="col">#</th>
                         <th scope="col">Status</th>
-                        <th scope="col">Price</th>
+                        <th scope="col">Cena</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {ifset $orders}
+                    {if count($orders) != 0}
                         <tr n:foreach="$orders as $order">
 							<th scope="row"><a href="/order/detail/{$order->id}">{$order->id}</a></th>
                             <td>{$order->status}</td>
@@ -28,9 +28,9 @@
                         </tr>
                     {else}
                         <tr>
-                            <td>orders not found</td> {*TODO whole line*}
+                            <td colspan="3">Žiadne objednávky</td>
                         </tr>
-                    {/ifset}
+                    {/if}
                     </tbody>
                 </table>
 			</div>
