--- a/app/templates/Order/pdf.latte
+++ b/app/templates/Order/pdf.latte
@@ -2,7 +2,7 @@
 	{var $sum = 0}
 	<div style="min-height:75vh; width:100%; padding-right:15px; padding-left:15px;">
 			<div style="margin:auto;margin-top:2rem; width:66%;">
-				<span><h4 style="margin-top:0.5rem; margin-bottom:0.5rem;">Order information:</h4></span><br>
+				<span><h4 style="margin-top:0.5rem; margin-bottom:0.5rem;">Informácie o objednávke:</h4></span><br>
 				<span><b class="pr-3">ID:</b> {$order->id}</span><br>
 				<span><b class="pr-3">Status:</b> {$order->status}</span><br><br>
 			</div>
@@ -12,7 +12,7 @@
                     <thead>
                         <tr>
                             <th style="width:30%; text-align:left;">Nazov:</th>
-                            <th style="width:30%; text-align:left;">Pocet:</th>
+                            <th style="width:30%; text-align:left;">Počet:</th>
                             <th style="width:30%; text-align:left;">Cena:</th>
                         </tr>
                     </thead>
@@ -30,16 +30,16 @@
 			</div><br>
 		<div style="width:66%; margin:auto; margin-top:2rem;">
 			<div>
-				<span><b style="padding-right:2rem;">Total:</b>{$sum} €</span>
+				<span><b style="padding-right:2rem;">Celkom:</b>{$sum} €</span>
 			</div><br>
 			<div style="margin-top:2rem;">
-				<span><h4 style="margin-top:0.5rem; margin-bottom:0.5rem;">Delivery information:</h4></span><br>
+				<span><h4 style="margin-top:0.5rem; margin-bottom:0.5rem;">Dodacie informácie:</h4></span><br>
 				{var $sys_user = $userService->getByID($order->user_id)}
-				<span><b class="pr-3">Name:</b> {$sys_user->name} {$sys_user->surname}</span><br>
-				<span><b class="pr-3">Address:</b> {$sys_user->address}</span><br>
-				<span><b class="pr-3">City:</b> {$sys_user->city}</span><br>
-				<span><b class="pr-3">ZIP:</b> {str_pad($sys_user->zip, 5, "0", STR_PAD_LEFT)}</span><br>
-				<span><b class="pr-3">Country:</b> {$sys_user->country}</span><br>
+				<span><b class="pr-3">Meno:</b> {$sys_user->name} {$sys_user->surname}</span><br>
+				<span><b class="pr-3">Adresa:</b> {$sys_user->address}</span><br>
+				<span><b class="pr-3">Mesto:</b> {$sys_user->city}</span><br>
+				<span><b class="pr-3">PSČ:</b> {str_pad($sys_user->zip, 5, "0", STR_PAD_LEFT)}</span><br>
+				<span><b class="pr-3">Štát:</b> {$sys_user->country}</span><br>
 			</div>
 		</div>
 	</div>
