--- a/app/templates/parts/footer.latte
+++ b/app/templates/parts/footer.latte
@@ -5,7 +5,7 @@
         <h3 class="h5">Kontakt:</h3>
         <ul>
           <li>Mobil: 999 999 999</li>
-          <li>Mail: admin@gmail.com</li>
+          <li>Mail: admin@lapsansky.phpcode.eu</li>
         </ul>
       </div>
     </div>
